# gitignore-generator

./: .gitignore  IMPLEMENTATION_NOTES.md  README.md  STEP3_COMPLETE.md  code_plan.md  code_plan_refined.md  gitignore_generator.spec  pyproject.toml
.github/workflows/: release.yml  test.yml
src/: main.py
src/gitignore_generator/: __init__.py  cli.py  generator.py  prompt.py  templates.py
tests/: test_generator.py  test_integration.py  test_prompt.py  test_templates.py
